# backend-two

./: .gitignore  Linux_practice.txt  README.md  cacheControlMiddleware.js  check_google.sh  cron_log.txt  google.sh  google_cron.sh  index.js  linuxCommands.sh  linux_practice.sh  my_linux_cmd.sh  my_linux_command.sh  my_linux_commands.sh  package-lock.json  package.json  scripts.sh
workshop01/caching/: .dockerignore  .env.example  Dockerfile  Makefile  entrypoint.sh  pyproject.toml
workshop01/caching/project/: settings.py  urls.py  views.py
workshop01/public_private_channels/: .env.example  Dockerfile  Makefile  entrypoint.sh  pyproject.toml
workshop01/public_private_channels/chat/: routes.py
workshop01/public_private_channels/chat/api/: chat_history.py
workshop01/public_private_channels/chat/consumers/: __init__.py  chat_consumer.py
workshop01/public_private_channels/chat/forms/: __init__.py  chat_joining_form.py  conversation_form.py  room_form.py  utils.py
workshop01/public_private_channels/chat/templates/chat/: chat.html  index.html
workshop01/public_private_channels/chat/views/: __init__.py  chat.py  index.py
workshop01/public_private_channels/data/repository/chat_repository/: __init__.py  (+1 more)
workshop01/public_private_channels/di/: repository.py
workshop01/public_private_channels/domain/models/: __init__.py  conversation.py  message_type.py  room.py  user.py
workshop01/public_private_channels/domain/repository/: __init__.py  chat_repository.py  room_repository.py
workshop01/public_private_channels/project/: asgi.py  settings.py  urls.py
(+618 files in other folders)
