[tool.poetry]
name = "caching"
version = "0.1.0"
description = "Practice problem of cache-control header"
authors = ["Md. Rifaet - Ullah <md.rifaetullahrifat@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
django = "^5.1.2"
environs = "^11.0.0"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
